<resources>
    <string name="app_name">LeoSender</string>
    <string name="btn_game1_txt">Start Game 1</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">tIdJ4EevU1yCdQQJ6fJhqxKlFiRgUjP1DUEzfeWc</string>
    <string name="back4app_client_key">iqnNgPLywTB0mV1Hjtuf9aLkCZxDvLFYE57AFEut</string>
    <color name="Leo">#0D8BD3</color>
    <color name="button">#ffffff</color>

    <string name="btn_connect">connect</string>
    <string name="btn_moveHand">move hands</string>
    <string name="btn_sayHello">say hello</string>
    <string name="btn_longGame">long game</string>
    <string name="btn_seeResult">see result</string>
    <string name="btn_disconnect">disconnect</string>
    <string name="title">Connection</string>
    <string name="content">Please connect to Leo</string>
    <string name="agree">Connect</string>
    <string name="disagree">Exit Game</string>
    <string name="please_wait">Please wait for connection</string>
    <string name="progress_dialog">Connecting</string>
    <string name="title_activity_main_side">MainActivitySide</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!--strings for navs-->
    <string name="nav_basic">Basic Games</string>
    <string name="nav_memoryGame">Memory Games</string>
    <string name="nav_reactionGame">Reaction Game</string>
    <string name="nav_detectFace">Detect Face</string>
    <string name="data_analysis">Your Analysis</string>
    <string name="settings">Settings</string>

    <!--string for basic game tab-->
    <string name="btn_bg_g1">say hello</string>
    <string name="btn_bg_g2">wiggle hand</string>
    <string name="btn_bg_g3">move forward</string>
    <string name="btn_bg_g4">move backward</string>
    <string name="btn_bg_g5">turn around</string>
    <string name="btn_bg_g6">spin</string>

    <!--string for memory game tab-->
    <string name="btn_mg_g1">memory game prestige</string>
    <string name="btn_mg_g2">memory game very easy</string>
    <string name="btn_mg_g3">memory game easy</string>
    <string name="btn_mg_g4">memory game normal</string>
    <string name="btn_mg_g5">memory game hard</string>
    <string name="btn_mg_g6">memory game very hard</string>

    <!--string for reaction game tab not useful-->
    <string name="btn_rg_g1">reaction game 1</string>
    <string name="btn_rg_g2">reaction game 2</string>
    <string name="btn_rg_g3">reaction game 3</string>
    <string name="btn_rg_g4">reaction game 4</string>
    <string name="btn_rg_g5">reaction game 5</string>
    <string name="btn_rg_g6">reaction game 6</string>

    <!--string for face detection tab-->
    <string name="btn_fd_detect">start detect</string>
    <string name="btn_fd_opt2">option 2</string>
    <string name="btn_fd_opt3">option 3</string>
    <string name="btn_fd_opt4">option 4</string>
    <string name="btn_fd_opt5">option 5</string>
    <string name="btn_fd_opt6">option 6</string>

    <string name="analyse_data">Analyse data</string>
    <string name="detect_face">Detect Face</string>

    <!--String for settings tab-->
    <string name="settings_top">User Settings</string>

</resources>
