<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_basic_game"
            android:icon="@drawable/ic_game"
            android:title="@string/nav_basic" />
        <item
            android:id="@+id/nav_memory_game"
            android:icon="@drawable/ic_brain"
            android:title="@string/nav_memoryGame" />
        <item
            android:id="@+id/nav_reaction_game"
            android:icon="@drawable/ic_light"
            android:title="@string/nav_reactionGame" />
        <item
            android:id="@+id/nav_detect_face"
            android:icon="@drawable/ic_face"
            android:title="@string/nav_detectFace" />

        <item
            android:id="@+id/nav_data_analysis"
            android:icon="@drawable/ic_analysis"
            android:title="@string/data_analysis" />

        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

</menu>
