<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp">

            <Button
                android:id="@+id/btn_mg1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/button_round"
                android:fontFamily="@font/carter_one"
                android:onClick="MemoryPrestige"
                android:text="@string/btn_mg_g1"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp" >

            <Button
                android:id="@+id/btn_mg2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/button_round"
                android:fontFamily="@font/carter_one"
                android:onClick="MemoryVeryEasy"
                android:text="@string/btn_mg_g2"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" >

            <Button
                android:id="@+id/btn_mg3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/button_round"
                android:fontFamily="@font/carter_one"
                android:onClick="MemoryEasy"
                android:text="@string/btn_mg_g3"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" >

            <Button
                android:id="@+id/btn_mg4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/button_round"
                android:fontFamily="@font/carter_one"
                android:onClick="MemoryNormal"
                android:text="@string/btn_mg_g4"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" >

            <Button
                android:id="@+id/btn_mg5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/button_round"
                android:fontFamily="@font/carter_one"
                android:onClick="MemoryHard"
                android:text="@string/btn_mg_g5"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" >

            <Button
                android:id="@+id/btn_mg6"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/button_round"
                android:fontFamily="@font/carter_one"
                android:onClick="MemoryVeryHard"
                android:text="@string/btn_mg_g6"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>