<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.stelios.leoappjavamosquitto.MainActivity"
    tools:showIn="@layout/app_bar_main_activity_side">


    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="43dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:orientation="vertical"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp">

                            <Button
                                android:id="@+id/btn1"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:background="@drawable/button_round"
                                android:fontFamily="@font/carter_one"
                                android:onClick="SayHello"
                                android:text="@string/btn_bg_g1"
                                android:textSize="25sp"
                                android:textStyle="bold"
                                android:textColor="#FFFFFF"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:orientation="vertical"
                            android:layout_marginLeft="5dp"
                            android:layout_marginBottom="5dp" >

                            <Button
                                android:id="@+id/btn2"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:background="@drawable/button_round"
                                android:fontFamily="@font/carter_one"
                                android:onClick="WiggleHand"
                                android:text="@string/btn_bg_g2"
                                android:textSize="25sp"
                                android:textStyle="bold"
                                android:textColor="#FFFFFF"/>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:orientation="vertical"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp" >

                            <Button
                                android:id="@+id/btn3"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:background="@drawable/button_round"
                                android:fontFamily="@font/carter_one"
                                android:onClick="MoveForward"
                                android:text="@string/btn_bg_g3"
                                android:textSize="25sp"
                                android:textStyle="bold"
                                android:textColor="#FFFFFF"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:orientation="vertical"
                            android:layout_marginLeft="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp" >

                            <Button
                                android:id="@+id/btn4"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:background="@drawable/button_round"
                                android:fontFamily="@font/carter_one"
                                android:onClick="MoveBackward"
                                android:text="@string/btn_bg_g4"
                                android:textSize="25sp"
                                android:textStyle="bold"
                                android:textColor="#FFFFFF"/>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:orientation="vertical"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp" >

                            <Button
                                android:id="@+id/btn5"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:background="@drawable/button_round"
                                android:fontFamily="@font/carter_one"
                                android:onClick="TurnAround"
                                android:text="@string/btn_bg_g5"
                                android:textSize="25sp"
                                android:textStyle="bold"
                                android:textColor="#FFFFFF"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:orientation="vertical"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp" >

                            <Button
                                android:id="@+id/btn6"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:background="@drawable/button_round"
                                android:fontFamily="@font/carter_one"
                                android:onClick="Spin"
                                android:text="@string/btn_bg_g6"
                                android:textSize="25sp"
                                android:textStyle="bold"
                                android:textColor="#FFFFFF"/>
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</android.support.constraint.ConstraintLayout>
